cmake_minimum_required(VERSION 2.8)
project(sample)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O4")
add_library(channel STATIC channel.c)
add_executable(sample sample.c)
target_link_libraries(sample channel pthread)
